--- a/event-reporter/package.json
+++ b/event-reporter/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eventreporter",
-  "homepage": "./",
-  "main": "event-reporter/Electron/main.js",
+  "name": "gs-panel",
+  "homepage": "./event-reporter/",
+  "main": "./Electron/main.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "wait-on": "^5.2.0"
   },
   "scripts": {
@@ -39,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.20.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.29.3"
   }
 }
