--- a/package.json
+++ b/package.json
@@ -1,8 +1,33 @@
 {
   "name": "gs-panel",
-  "version": "1.0",
-  "description": "Shaiya GS Event Panel",
+  "version": "1.0.0",
+  "description": "Shaiya GS Panel",
   "main": "index.js",
   "author": "Ashley Dunham <xenocide21@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "14.5.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "helmet": "^4.1.1",
+    "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "express": "latest",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.5",
+    "knex-cleaner": "^1.3.1",
+    "sqlite3": "^5.0.0"
+  },
+  "scripts": {
+    "test": "cross-env NODE_ENV=testing jest",
+    "server": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "node index.js"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
+  }
 }
